# nyakov

./: .gitignore  README.md  nginx.example.conf  nyakov.service  run
client/: .eslintrc.json  package.json  pnpm-lock.yaml  tsconfig.json  webpack.common.ts  webpack.prod.ts
client/scss/: main.css
client/src/: App.vue  shims-vue.d.ts  types.ts
client/src/components/: CopyButton.vue  FakeQuote.vue
nyakov/: .gitignore  pubspec.yaml
nyakov/src/: nyakov.dart  server.dart
server/: Cargo.toml
server/src/: emotes.rs  error.rs  lib.rs  main.rs
www/: uwsgi.yaml
www-backend/: pyproject.toml  run  uwsgi.yaml
www-backend/nyakov/: __init__.py  api_v1.py
www-frontend/: .eslintrc.json  package.json  pnpm-lock.yaml  tsconfig.json  webpack.common.ts
www-frontend/scss/: main.css
www-frontend/src/: App.vue  index.ejs  main.ts  shims-vue.d.ts  types.ts
www-frontend/src/components/: CopyButton.vue  FakeQuote.vue  Quote.vue
www/nyakov/: __init__.py
