[package]
name = "server"
version = "1.0.0"
authors = ["Jeremias Pettinen <hi@jeremi.as>"]
edition = "2021"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "3.1.6", features = ["derive"] }
lazy_static = "1.4.0"
poem = "1.3.16"
rand = "0.8.5"
regex = "1.5.5"
serde = "1.0.136"
serde_json = "1.0.79"
thiserror = "1.0.30"
tokio = { version = "1.17.0", features = ["rt-multi-thread"] }
tracing = "0.1.32"
tracing-subscriber = "0.3.9"
