[package]
name = "server"
version = "1.0.0"
authors = ["Jeremias Pettinen <hi@jeremi.as>"]
edition = "2021"

[dependencies]
chrono = { version = "0.4.23", features = ["serde"] }
clap = { version = "4.1.0", features = ["derive"] }
lazy_static = "1.4.0"
poem = "1.3.52"
rand = "0.8.5"
regex = "1.7.1"
serde = "1.0.152"
serde_json = "1.0.91"
thiserror = "1.0.38"
tokio = { version = "1.24.1", features = ["rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
