[tool.poetry]
name = "nyakov-www"
version = "1.0.0"
description = "Serve Markov-chain quotes."
authors = ["Jeremias Pettinen <hi@jeremi.as>"]
license = "ISC"

[tool.poetry.dependencies]
Flask = "^2.0.1"
gevent = "^21.1.2"
python = "^3.9"
uWSGI = {url = "https://github.com/pettinen/uwsgi/archive/refs/heads/uwsgi-2.0.tar.gz"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
