[tool.poetry]
name = "nyakov-www"
version = "1.0.0"
description = "Serve Markov-chain quotes."
authors = ["Jeremias Pettinen <hi@jeremi.as>"]
license = "ISC"

[tool.poetry.dependencies]
Flask = "^2.0.3"
gevent = "^21.12.0"
python = "^3.9"
uWSGI = {url = "https://github.com/pettinen/uwsgi/archive/refs/heads/uwsgi-2.0.tar.gz"}
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
